添加系统主导航栏

--- a/src/views/system/menu/_menu.less
+++ b/src/views/system/menu/_menu.less
@@ -1,3 +1,17 @@
 .menu {
+   top:10px;
+   padding: 15px;
+   border-radius: 8px;
+   box-shadow: 0 2px 4px rgba(0, 0, 0, .55), 0 0 6px rgba(0, 0, 0, .04)
+}
 
+.addPosInput {
+   width: 300px;
+   margin-right: 8px
+}
+.el-row {
+   margin-bottom: 20px;
+   &:last-child {
+      margin-bottom: 0;
+   }
 }
