--- a/src/views/system/menu/_menu.less
+++ b/src/views/system/menu/_menu.less
@@ -2,16 +2,73 @@
    top:10px;
    padding: 15px;
    border-radius: 8px;
-   box-shadow: 0 2px 4px rgba(0, 0, 0, .55), 0 0 6px rgba(0, 0, 0, .04)
+   box-shadow: 0 2px 7px rgba(0, 0, 0, .55), 0 0 6px rgba(0, 0, 0, .04);
+   height: 80%;
 }
 
 .addPosInput {
-   width: 300px;
-   margin-right: 8px
+   width: 180px;
+   margin-right: 3px;
+   height: 10px;
+}
+.inquire{
+   //margin: -5px;
+}
+.inquireBtn{
+   //margin: 3px;
+   left: -30px;
 }
 .el-row {
    margin-bottom: 20px;
    &:last-child {
       margin-bottom: 0;
    }
+}
+.mianMenu{
+   width: 104%;
+   padding-left: 0%;
+}
+
+.treeMenu{
+   height: 659px;
+}
+
+.posManaMain{
+   height: 565px;
+}
+
+/*******************************侧边滑块样式**************************************/
+//侧边
+.content {
+   overflow-y:scroll;
+}
+.test {
+   width   : 50px;
+   height  : 200px;
+   overflow: auto;
+   float   : left;
+   margin  : 5px;
+   border  : none;
+}
+.scrollbar {
+   width : 30px;
+   height: 300px;
+   margin: 0 auto;
+}
+.content::-webkit-scrollbar {
+   /*滚动条整体样式*/
+   width : 8px;  /*高宽分别对应横竖滚动条的尺寸*/
+   height: 0px;
+}
+.content::-webkit-scrollbar-thumb {
+   /*滚动条里面小方块*/
+   border-radius: 5px;
+   box-shadow   : inset 0 0 5px rgb(152, 152, 152);
+   background   : #ffffff;
+}
+.content::-webkit-scrollbar-track {
+   /*滚动条里面轨道*/
+   box-shadow   : inset 0 0 5px rgba(252, 252, 252, 0.2);
+   border-radius: 10px;
+   background   : #ffffff;
 }
