--- a/src/views/system/menu/_menu.less
+++ b/src/views/system/menu/_menu.less
@@ -16,7 +16,7 @@
 }
 .inquireBtn{
    //margin: 3px;
-   left: -30px;
+   margin-left: 20px;
 }
 .el-row {
    margin-bottom: 20px;
@@ -36,7 +36,9 @@
 .posManaMain{
    height: 565px;
 }
-
+.fontName{
+   font-size: 13px;
+}
 /*******************************侧边滑块样式**************************************/
 //侧边
 .content {
